--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@ body {
   color: #333;
   -webkit-text-size-adjust: 100%;
   padding-bottom: 15px;
-  background: #eee;
+  background: #ECEFF1;
 }
 
 .body--no-bottom {
