--- a/public/style.css
+++ b/public/style.css
@@ -78,6 +78,27 @@ h1, h2, h3 {
 
 /* HEADER */
 
+.header {
+  background: #B0BEC5;
+  _border-bottom: 1px solid red;
+  box-shadow: inset 0 -2px 3px rgba(0,0,0,0.1);
+  margin-top: -5px;
+  padding: 10px;
+}
+
+@media (min-width: 1025px) {
+  .header {
+    margin-top: -10px;
+    margin-left: -30px;
+    width: 120%;
+    padding-left: 25px;
+  }
+}
+
+.header__home-link {
+  color: #455A64 !important;
+}
+
 /* SHEET */
 
 .sheet {
@@ -805,6 +826,11 @@ h1, h2, h3 {
 
 .button--large {
   padding: 7px 12px;
+}
+
+.button--padded {
+  margin: -10px;
+  padding: 15px 18px;
 }
 
 
