--- a/public/style.css
+++ b/public/style.css
@@ -64,6 +64,82 @@ h1, h2, h3 {
 
 /* COMPONENTS */
 
+.button {
+  font-weight: bold;
+  padding: 5px 8px;
+  border-radius: 3px;
+  letter-spacing: .5px;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: .9em;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-transition: all .1s ease-out;
+          transition: all .1s ease-out;
+  -webkit-appearance: none; /* text input */
+  border: none; /* text input */
+  background: transparent; /* text input */
+  outline: none;
+
+  color: #2196f3;
+}
+
+.button:hover {
+  color: #64b5f6;
+}
+
+
+.button--cta {
+  background: #00e676;
+  color: white;
+  text-shadow: 0 0 2px #00c853;
+}
+
+.button--cta:hover, .button--cta:focus {
+  background: #69f0ae;
+  color: white;
+  text-shadow: 0 0 2px #00e676;
+}
+
+
+.button--raised {
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.1);
+}
+
+.button--raised:hover, .button--raised:focus {
+  box-shadow: 0 3px 8px 0 rgba(0,0,0,.15);
+}
+
+
+.button--large {
+  padding: 7px 12px;
+}
+
+.button--padded {
+  margin: -10px;
+  padding: 15px 18px;
+}
+
+
+@media (min-width: 560px) {
+  .button--scale {
+    padding: 7px 12px;
+  }
+
+  .button--scale.button--large {
+    padding: 10px 16px;
+  }
+}
+
+
+.button--submit {
+  background: #673ab7;
+  color: white;
+  color: rgba(255,255,255,.87);
+  padding: 7px 12px;
+}
+
+
+
 .button-link {
   color: #1976d2;
   font-weight: bold;
@@ -74,6 +150,24 @@ h1, h2, h3 {
 
 .button-link--destructive {
   color: #F44336;
+}
+
+
+
+.page-title {
+  font-size: 1.3em;
+  margin: 10px 8px;
+}
+
+.page-title__link {
+  display: inline-block;
+  padding: 10px;
+  margin: -10px;
+  color: #00C853;
+}
+
+.page-title--topic {
+  color: #536DFE;
 }
 
 /* HEADER */
@@ -95,7 +189,11 @@ h1, h2, h3 {
 }
 
 .header__home-link {
-  color: #455A64 !important;
+  color: #455A64;
+}
+
+.header__forum-link {
+  color: #69F0AE;
 }
 
 /* SHEET */
@@ -486,19 +584,6 @@ h1, h2, h3 {
 
 /* FORUM */
 
-.forum-heading {
-  background: #00C853;
-  padding: 5px 10px;
-  font-size: 1.5em;
-  margin: 8px;
-  border-radius: 2px;
-  box-shadow: 0 1px 2px rgba(0,0,0,.2);
-}
-
-.forum-heading__link {
-  color: hsl(137, 77%, 92.5%); /* A100 = 85% */
-}
-
 .liste-topics {
   width: 100%;
   padding: 0 8px;
@@ -781,119 +866,6 @@ h1, h2, h3 {
   display: inline-block;
   padding-right: 16px;
   background: url(/images/page_suiv.svg) right -8px center no-repeat;
-}
-
-/* BOUTONS */
-
-.button {
-  font-weight: bold;
-  padding: 5px 8px;
-  border-radius: 3px;
-  letter-spacing: .5px;
-  cursor: pointer;
-  text-transform: uppercase;
-  font-size: .9em;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-transition: all .1s ease-out;
-          transition: all .1s ease-out;
-  -webkit-appearance: none; /* text input */
-  border: none; /* text input */
-  background: transparent; /* text input */
-  outline: none;
-
-  color: #2196f3;
-}
-
-.button:hover {
-  color: #64b5f6;
-}
-
-
-.button--cta {
-  background: #00e676;
-  color: white;
-  text-shadow: 0 0 2px #00c853;
-}
-
-.button--cta:hover, .button--cta:focus {
-  background: #69f0ae;
-  color: white;
-  text-shadow: 0 0 2px #00e676;
-}
-
-
-.button--raised {
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,.1);
-}
-
-.button--raised:hover, .button--raised:focus {
-  box-shadow: 0 3px 8px 0 rgba(0,0,0,.15);
-}
-
-
-.button--large {
-  padding: 7px 12px;
-}
-
-.button--padded {
-  margin: -10px;
-  padding: 15px 18px;
-}
-
-
-@media (min-width: 560px) {
-  .button--scale {
-    padding: 7px 12px;
-  }
-
-  .button--scale.button--large {
-    padding: 10px 16px;
-  }
-}
-
-
-.button--submit {
-  background: #673ab7;
-  color: white;
-  color: rgba(255,255,255,.87);
-  padding: 7px 12px;
-}
-
-/* TOPIC */
-
-.topic-heading {
-  background: #536DFE;
-  padding: 5px 10px;
-  font-size: 1.3em;
-  margin: 8px;
-  border-radius: 2px;
-  box-shadow: 0 1px 2px rgba(0,0,0,.2);
-}
-
-.topic-heading__link {
-  color: hsl(231, 100%, 92.5%); /* A100 = 77% */
-}
-
-.forum-title a {
-  color: #9c0;
-}
-
-@media (MAX-width: 1024px) {
-  h2.forum-title {
-    font-size: 1.17em;
-    padding: 0 10px;
-    margin: 5px 0;
-  }
-  
-  .topic-title {
-    font-size: 1.5em;
-  }
-}
-
-@media (min-width: 1025px) {
-  .topic-title {
-    padding-left: 10px;
-  }
 }
 
 /* TOPIC - Pagination */
