--- a/public/style.css
+++ b/public/style.css
@@ -218,7 +218,15 @@ h1, h2, h3 {
   color: #64DD17;
   padding: 10px 20px;
   background: hsla(88, 100%, 97%, .6); /* A100 = 78% */
+  box-shadow: inset 0 -2px 3px rgba(0,0,0,0.05);
   white-space: nowrap;
+}
+
+@media (MAX-width: 767px) {
+  .header__home-link--accompanied,
+  .header__forum-link {
+    padding: 10px 10px;
+  }
 }
 
 /* SHEET */
