--- a/public/style.css
+++ b/public/style.css
@@ -2151,6 +2151,7 @@ h1, h2, h3 {
 @media (min-width: 640px) {
   .profile-avatar {
     margin-top: 10px;
+    box-shadow: 0 1px 2px rgba(0,0,0,.2);
   }
 }
 
