--- a/public/style.css
+++ b/public/style.css
@@ -1740,6 +1740,8 @@ h1, h2, h3 {
   right: 10px;
   color: #888;
   cursor: pointer;
+  margin: -10px;
+  padding: 10px;
 }
 
 .message__ignored-notice_regular {
