--- a/public/style.css
+++ b/public/style.css
@@ -1121,9 +1121,9 @@ h1, h2, h3 {
 .liste-messages {
   overflow-x: hidden;
 
-  /* Ombre du dernier message */
-  padding-bottom: 5px;
-  margin-bottom: -5px;
+  /* Ignored show-message button, last message’s shadow */
+  padding-bottom: 10px;
+  margin-bottom: -10px;
 }
 
 @media (min-width: 1025px) {
