Differentiate dev from production with header color

--- a/public/style.css
+++ b/public/style.css
@@ -322,6 +322,10 @@ h1, h2, h3 {
   }
 }
 
+.header--localhost {
+  background: #B39DDB;
+}
+
 .header__home-cell {
   display: table-cell;
   width: 1px;
