--- a/public/style_notconnected.css
+++ b/public/style_notconnected.css
@@ -283,16 +283,12 @@ body {
   outline: none;
 }
 
-.connect-form__input--captcha {
-  width: 240px;
-  margin: .5em auto;
+.connect-form__captcha {
+  min-height: 78px;
 }
 
-.connect-form__captcha {
-  display: block;
-  margin: 18px auto 0;
-  width: 240px;
-  height: 80px;
+.g-recaptcha > div > div {
+  margin: auto;
 }
 
 .connect-form__submit {
