Fix captcha fallback centering

--- a/public/style_notconnected.css
+++ b/public/style_notconnected.css
@@ -288,7 +288,7 @@ body {
 }
 
 .g-recaptcha > div > div {
-  margin: auto;
+  margin: auto !important;
 }
 
 .connect-form__captcha-alternative-instructions {
