Remove stardust background

--- a/public/style.css
+++ b/public/style.css
@@ -27,7 +27,7 @@ body {
 
 @media (min-width: 1025px) {
   body {
-    background: #444349 url(/images/background_stardust.png);
+    background: #444349;
   }
 }
 
