--- a/public/style.css
+++ b/public/style.css
@@ -619,27 +619,12 @@ h1, h2, h3 {
 }
 
 .menu {
-  margin-left: 15px;
-  margin-bottom: 15px;
-  box-shadow: 0 1px 2px rgba(0,0,0,.25);
-  border-radius: 0 0 3px 3px;
-}
-
-.menu__title {
-  font-size: 1em;
-  padding: 3px 10px;
-  background: #3949AB;
-  color: #E8EAF6;
-  font-size: 15px;
-  border-radius: 3px 3px 0 0;
-}
-
-.menu__items {
-  background: #E8EAF6;
-  margin: 0;
+  margin: 0 0 15px 15px;
+  background: hsla(232,45%,91%,1);
   padding: 3px 0;
   list-style: none;
-  border-radius: 0 0 3px 3px;
+  border-radius: 3px;
+  box-shadow: 0 1px 2px rgba(0,0,0,.25);
 }
 
 .menu__item {
