--- a/public/style.css
+++ b/public/style.css
@@ -423,7 +423,7 @@ h1, h2, h3 {
   width: 100%;
   margin-top: -5px;
   font-weight: bold;
-  background: #B3E5FC;
+  background: #90CAF9;
   box-shadow: inset 0 -2px 3px rgba(0,0,0,0.1);
 }
 
@@ -441,7 +441,7 @@ h1, h2, h3 {
 }
 
 .header__home-link {
-  color: #0288D1;
+  color: #1565C0;
   padding: 10px 20px;
   display: inline-block;
 }
@@ -449,13 +449,13 @@ h1, h2, h3 {
 .header__forum-cell {
   display: table-cell;
   text-transform: none;
-  background: #81D4FA;
+  background: #BBDEFB;
   box-shadow: inset 0 -2px 3px rgba(0,0,0,0.08);
   white-space: nowrap;
 }
 
 .header__forum-link {
-  color: #0288D1;
+  color: #1565C0;
   padding: 10px 20px;
   display: inline-block;
 }
