--- a/public/style.css
+++ b/public/style.css
@@ -424,7 +424,7 @@ h1, h2, h3 {
   margin-top: -5px;
   font-weight: bold;
   background: #90CAF9;
-  box-shadow: inset 0 -2px 3px rgba(0,0,0,0.1);
+  box-shadow: inset 0 -2px 3px rgba(0,0,0,.1);
 }
 
 @media (min-width: 1025px) {
@@ -446,11 +446,15 @@ h1, h2, h3 {
   display: inline-block;
 }
 
+.header__home-link--accompanied {
+  box-shadow: inset -2px 0 3px rgba(0,0,0,.05);
+}
+
 .header__forum-cell {
   display: table-cell;
   text-transform: none;
   background: #BBDEFB;
-  box-shadow: inset 0 -2px 3px rgba(0,0,0,0.08);
+  box-shadow: inset 0 -2px 3px rgba(0,0,0,0.08), inset 1px 0 1px rgba(255,255,255,.2);
   white-space: nowrap;
 }
 
