--- a/public/style.css
+++ b/public/style.css
@@ -619,11 +619,21 @@ h1, h2, h3 {
 }
 
 .menu {
-  margin: 0 0 15px 15px;
+  margin: 15px 10px;
   background: #CFE8FC;
-  padding: 3px 0;
+  padding: 2px 0;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgba(0,0,0,.25);
+}
+
+@media (min-width: 1025px) {
+  .menu {
+    margin: 15px 0;
+  }
+}
+
+.aside__menu {
+  margin: 0 0 15px 15px;
 }
 
 .menu__item {
@@ -633,6 +643,17 @@ h1, h2, h3 {
   font-weight: bold;
   font-size: 14px;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+}
+
+@media (MAX-width: 1024px) {
+  .menu__item {
+    padding: 9px 10px;
+  }
+}
+
+.menu__item + .menu__item {
+  border-top: 1px solid #BBDEFB;
 }
 
 .menu__item:hover {
