--- a/public/style.css
+++ b/public/style.css
@@ -620,7 +620,7 @@ h1, h2, h3 {
 
 .menu {
   margin: 15px 10px;
-  background: #CFE8FC;
+  background: #BBDEFB;
   padding: 2px 0;
   border-radius: 3px;
   box-shadow: 0 1px 2px rgba(0,0,0,.25);
@@ -653,12 +653,12 @@ h1, h2, h3 {
 }
 
 .menu__item + .menu__item {
-  border-top: 1px solid #BBDEFB;
+  border-top: 1px solid #90CAF9;
 }
 
 .menu__item:hover {
   color: hsla(216,85%,8%,1);
-  background: #BBDEFB;
+  background: #90CAF9;
 }
 
 .slider.sliding {
