--- a/public/style.css
+++ b/public/style.css
@@ -179,6 +179,7 @@ h1, h2, h3 {
   margin: 10px 8px 0;
   text-shadow: 0 1px 0 white;
   position: relative;
+  word-wrap: break-word;
 }
 
 .page-title--larger {
@@ -906,6 +907,7 @@ h1, h2, h3 {
 
 .topic__main-link {
   display: table;
+  table-layout: fixed;
   width: 100%;
   color: #1565C0;
   min-height: 50px;
@@ -970,6 +972,7 @@ h1, h2, h3 {
   padding: 3px 0 3px 5px;
   vertical-align: middle;
   background: white;
+  word-wrap: break-word;
 }
 
 @media (min-width: 400px) {
