--- a/public/style.css
+++ b/public/style.css
@@ -923,6 +923,7 @@ h1, h2, h3 {
   width: 100%;
   color: #1565C0;
   min-height: 50px;
+  table-layout: fixed;
 }
 
 @media (min-width: 1025px) {
@@ -984,7 +985,7 @@ h1, h2, h3 {
   padding: 3px 0 3px 5px;
   vertical-align: middle;
   background: white;
-  word-break: break-all;
+  word-wrap: break-word;
 }
 
 @media (min-width: 400px) {
