--- a/public/style.css
+++ b/public/style.css
@@ -1042,7 +1042,8 @@ h1, h2, h3 {
   vertical-align: middle;
   color: #1565C0;
   background: white;
-  min-width: 50px;
+  min-width: 55px;
+  max-width: 90px;
   padding: 0 5px;
 }
 
